feat(PAR-16):feat(PAR-44): Adds final touches on main reservation journey and spruces up the frontend with some bootstrap styling